--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
     <style>
-        /* 여기에 제공해주신 CSS 스타일 코드를 추가합니다 */
+        /*CSS 스타일 코드를 추가합니다 */
     </style>
     <title>오골계</title>
 </head>
@@ -19,13 +19,13 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="/views/user.html">마이 페이지</a>
+                        <a class="nav-link" href="./user.html">마이 페이지</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/views/signup.html" id="signupButton">회원가입</a>
+                        <a class="nav-link" href="./signup.html" id="signupButton">회원가입</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/views/signin.html">로그인</a>
+                        <a class="nav-link" href="./signIn.html"id="signInButton">로그인</a>
                     </li>
                 </ul>
             </div>
