프론트 작동구현

--- a/public/user.html
+++ b/public/user.html
@@ -11,12 +11,12 @@
       <h2>비밀번호 변경</h2>
       <form>
         <div class="mb-3">
-          <label for="password" class="form-label">현재비밀번호</label>
-          <input type="password" class="form-control" id="password" placeholder="비밀번호를 입력하세요" required />
+          <label for="currentPassword" class="form-label">현재비밀번호</label>
+          <input type="currentPassword" class="form-control" id="currentPassword" placeholder="현재비밀번호를 입력하세요" required />
         </div>
         <div class="mb-3">
-          <label for="confirmPassword" class="form-label">바꿀 비밀번호</label>
-          <input type="password" class="form-control" id="confirmPassword" placeholder="확인용 비밀번호를 입력하세요" required />
+          <label for="editPassword" class="form-label">바꿀 비밀번호</label>
+          <input type="editPassword" class="form-control" id="editPassword" placeholder="바꿀 비밀번호를 입력하세요" required />
         </div>
         <button type="submit" class="btn btn-primary" id="userSubmitButton">저장</button>
       </form>
