--- a/public/coulumns.html
+++ b/public/coulumns.html
@@ -141,7 +141,7 @@
       </div>
     </div>
     <button class="add-column-btn"> 
-      <a type="button" href="put_profile.html" onclick="openPopup(this.href, 1000, 700); return false;"
+      <a type="button" href="/public/creat_columns.html" onclick="openPopup(this.href, 1000, 700); return false;"
       class="btn btn-dark">
       + 칼럼 생성
   </a>
