칼럼 생성 모달창 html

--- a/public/coulumns.html
+++ b/public/coulumns.html
@@ -146,9 +146,8 @@
       + 칼럼 생성
   </a>
 </button>
-    </div>
-    
+    </div> 
   </div>
-
+  <script src="/public/js/columns.js"></script>
 </body>
 </html>
