--- a/public/creat_columns.html
+++ b/public/creat_columns.html
@@ -50,9 +50,10 @@
 <body>
   <div class="container">
     <h1>Column Creator</h1>
-    <input type="text" class="column-name" placeholder="Column Name">
-    <input type="number" class="column-number" placeholder="Column Number">
-    <button class="create-button">Create Column</button>
+    <input type="number" class="boardId" name="boardId" id="boardId" placeholder="boardId">
+    <input type="text" class="columnName" name="columnName" id="columnName" placeholder="Column Name">
+    <input type="number" class="columnIndex" name="columnIndex" id="columnIndex" placeholder="Column Number">
+    <button type="button" class="create-button" id="CreateColumn" >Create Column</button>
   </div>
   <script src="/public/js/creat_columns.js"></script>
 </body>
