칼럼 get 메서드 연결중

--- a/public/columns.html
+++ b/public/columns.html
@@ -121,7 +121,7 @@
       <a href="#">Help</a>
     </div>
     <div class="column-container">
-      <div class="column">
+      <!-- <div class="column">
         <h2>Column 1</h2>
         <button class="add-card-btn">Add Card</button>
         <div class="card">Card 1</div>
@@ -138,7 +138,7 @@
         <button class="add-card-btn">Add Card</button>
         <div class="card">Card 5</div>
         <div class="card">Card 6</div>
-      </div>
+      </div> -->
     </div>
     <button class="add-column-btn"> 
       <a type="button" href="/public/creat_columns.html" onclick="openPopup(this.href, 1000, 700); return false;"
