프론트 재연결

--- a/public/creat_columns.html
+++ b/public/creat_columns.html
@@ -55,6 +55,6 @@
     <input type="number" class="columnIndex" name="columnIndex" id="columnIndex" placeholder="Column Number">
     <button type="button" class="create-button" id="CreateColumn" >Create Column</button>
   </div>
-  <script src="/public/js/creat_columns.js"></script>
+  <script src="./creat_columns.js"></script>
 </body>
 </html>
