--- a/public/signIn.html
+++ b/public/signIn.html
@@ -31,7 +31,7 @@
           </div>
           <div class="modal-body">
             <p>로그인 완료되었습니다!</p>
-            <a href="./index.html" class="btn btn-primary">메인 페이지로 이동</a>
+            <a href="coulumns.html" class="btn btn-primary">보더 페이지로 이동</a>
           </div>
         </div>
       </div>
