칼럼 조회 기능 수정중

--- a/public/columns.html
+++ b/public/columns.html
@@ -121,24 +121,28 @@
       <a href="#">Help</a>
     </div>
     <div class="column-container">
-      <!-- <div class="column">
-        <h2>Column 1</h2>
+      <ul id="Columns"></ul>
+      <!--
+        <li> 
+        <div class="column">
+                 <div id="Columns">${columnName}</div>
         <button class="add-card-btn">Add Card</button>
         <div class="card">Card 1</div>
         <div class="card">Card 2</div>
       </div>
       <div class="column">
-        <h2>Column 2</h2>
+             <div id="Columns">${columnName}</div>
         <button class="add-card-btn">Add Card</button>
         <div class="card">Card 3</div>
         <div class="card">Card 4</div>
       </div>
       <div class="column">
-        <h2>Column 3</h2>
+               <div id="Columns">${columnName}</div>
         <button class="add-card-btn">Add Card</button>
         <div class="card">Card 5</div>
         <div class="card">Card 6</div>
-      </div> -->
+      </div> 
+    </li>-->
     </div>
     <button class="add-column-btn"> 
       <a type="button" href="./creat_columns.html" onclick="openPopup(this.href, 1000, 700); return false;"
