인덱스 연결

--- a/public/index.html
+++ b/public/index.html
@@ -5,18 +5,60 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
     <style>
-        /*CSS 스타일 코드를 추가합니다 */
+        body {
+            background-color: rgb(243, 243, 166);
+            margin: 0;
+            padding: 0;
+        }
+        * {
+            margin: 0;
+            padding: 0;
+        }
+
+        /* 네비게이션 바 스타일 */
+        .navbar {
+            background-color: rgb(243, 243, 166);
+            padding: 20px;
+        }
+        .navbar-brand {
+            font-size: 24px;
+            font-weight: bold;
+            color: black;
+            order: -1000; /* 로고를 왼쪽에 위치시키기 위해 순서를 변경 */
+        }
+        .navbar-toggler-icon {
+            background-color: black;
+        }
+        .navbar-nav .nav-item .nav-link {
+            color: black;
+            font-weight: bold;
+        }
+        .collapse.navbar-collapse {
+            justify-content: flex-end; /* 나머지 메뉴를 오른쪽에 위치시키기 위해 justify-content 속성 추가 */
+        }
+
+        /* 커스텀 컨테이너 스타일 */
+        .custom-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 80vh;
+        }
     </style>
     <title>오골계</title>
 </head>
+
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg">
         <div class="container">
-            <a class="navbar-brand" href="#">로고</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <a class="navbar-brand">
+                <img src="./img/logo.png" alt="">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+            <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link" href="./user.html">마이 페이지</a>
@@ -33,12 +75,13 @@
     </nav>
 
     <!-- 회원가입 폼 -->
-  
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </body>
 </html>
+
+
 
 
 
