--- a/public/columns.html
+++ b/public/columns.html
@@ -49,6 +49,7 @@ margin-right: 20px;
 display: flex;
 flex-direction: row;
 overflow-x: auto;
+
 }
 .column {
 display: flex;
@@ -60,6 +61,9 @@ box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.1);
 border-radius: 10px;
 margin-right: 20px;
 margin-top: 200px;
+}
+ul {
+list-style: none;
 }
 .card {
 margin: 10px 0;
@@ -89,6 +93,18 @@ color: white;
 border: none;
 border-radius: 3px;
 cursor: pointer;
+}
+.column-container {
+-ms-overflow-style: none; /* 인터넷 익스플로러 */
+scrollbar-width: none; /* 파이어폭스 */
+
+}
+.column-container::-webkit-scrollbar {
+display: none; /* Chrome, Safari, Opera*/
+}
+
+li {
+float:left;
 }
 .action-btn {
 background-color: #E8CDCD;
