--- a/public/signIn.html
+++ b/public/signIn.html
@@ -4,23 +4,76 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" />
+    <style>
+      body {
+        background-color: #f6f8a9;
+        margin: 0;
+        padding: 0;
+      }
+      * {
+        margin: 0;
+        padding: 0;
+      }
+
+      /* 네비게이션 바 스타일 */
+      .navbar {
+        background-color: #f6f8a9;
+        padding: 20px;
+      }
+      .navbar-brand {
+        font-size: 24px;
+        font-weight: bold;
+        color: black;
+      }
+      .navbar-toggler-icon {
+        background-color: black;
+      }
+      .navbar-nav .nav-item .nav-link {
+        color: black;
+        font-weight: bold;
+      }
+
+      #signInSubmitButton {
+        background-color: #e9d0d0;
+        border-color: #3f3f3f;
+        width: 200px;
+        padding: 10px 20px;
+        border-radius: 50px;
+        font-size: 16px;
+      }
+
+      /* 커스텀 컨테이너 스타일 */
+      .custom-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 80vh;
+      }
+    </style>
     <title>로그인</title>
   </head>
   <body>
     <div class="container mt-5">
-      <h2>로그인</h2>
-      <form>
-        <div class="mb-3">
-          <label for="email" class="form-label">이메일</label>
-          <input type="email" class="form-control" id="email" placeholder="이메일을 입력하세요" required />
+      <div class="row justify-content-center">
+        <img src="./img/login.PNG" alt="" width="120px" height="120px" />
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-4">
+          <form>
+            <div class="mb-3">
+              <label for="email" class="form-label">이메일</label>
+              <input type="email" class="form-control" id="email" placeholder="이메일을 입력하세요" required />
+            </div>
+            <div class="mb-3">
+              <label for="password" class="form-label">비밀번호</label>
+              <input type="password" class="form-control" id="password" placeholder="비밀번호를 입력하세요" required />
+            </div>
+            <div class="row justify-content-center">
+              <button type="submit" class="btn btn-primary" id="signInSubmitButton">로그인</button>
+            </div>
+          </form>
         </div>
-        <div class="mb-3">
-          <label for="password" class="form-label">비밀번호</label>
-          <input type="password" class="form-control" id="password" placeholder="비밀번호를 입력하세요" required />
-        </div>
-
-        <button type="submit" class="btn btn-primary" id="signInSubmitButton">로그인</button>
-      </form>
+      </div>
     </div>
 
     <div class="modal fade" id="signInSuccessModal" tabindex="-1" aria-labelledby="signInSuccessModalLabel" aria-hidden="true">
