컬럼 이름 수정 로직 작성중

--- a/public/columns.html
+++ b/public/columns.html
@@ -50,12 +50,12 @@
       flex-direction: row;
       overflow-x: auto;
       -ms-overflow-style: none; /* 인터넷 익스플로러 */
-scrollbar-width: none; /* 파이어폭스 */
+      scrollbar-width: none; /* 파이어폭스 */
     }
 
     .column-container::-webkit-scrollbar {
-display: none; /* Chrome, Safari, Opera*/
-}
+     display: none; /* Chrome, Safari, Opera*/
+    }
 
     .Columns{
       min-width: 1200px;
@@ -72,7 +72,7 @@ display: none; /* Chrome, Safari, Opera*/
       box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.1);
       border-radius: 10px;
       margin-right: 20px;
-      margin-top: 200px;
+      margin-top: 100px;
     }
     .card {
       margin: 10px 0;
@@ -91,7 +91,6 @@ display: none; /* Chrome, Safari, Opera*/
       border: none;
       border-radius: 10px;
       cursor: pointer;
-      margin-top: 200px;
     }
     .add-card-btn {
       align-self: flex-end;
@@ -142,16 +141,25 @@ float:left;
       <a href="#">Settings</a>
       <a href="#">Help</a>
     </div>
+    <button class="add-column-btn"> 
+      <a type="button" href="./creat_columns.html" onclick="openPopup(this.href, 1000, 700); return false;"
+      class="btn btn-dark">
+      + 칼럼 생성
+  </a>
+</button>
     <div class="column-container">
       <ul id="Columns"></ul>
       <!--
         <li> 
-        <div class="column">
-                 <div id="Columns">${columnName}</div>
-        <button class="add-card-btn">Add Card</button>
-        <div class="card">Card 1</div>
-        <div class="card">Card 2</div>
-      </div>
+       <div class="column">
+  <div class="column-header">
+    <input type="text" class="column-name-input" id= "Columns" value="${columnName}" />
+    <button class="edit-column-btn" id="updateColumnName >수정</button>
+  </div>
+  <button class="add-card-btn">Add Card</button>
+  <div class="card">Card 1</div>
+  <div class="card">Card 2</div>
+</div>
       <div class="column">
              <div id="Columns">${columnName}</div>
         <button class="add-card-btn">Add Card</button>
@@ -166,12 +174,6 @@ float:left;
       </div> 
     </li>-->
     </div>
-    <button class="add-column-btn"> 
-      <a type="button" href="./creat_columns.html" onclick="openPopup(this.href, 1000, 700); return false;"
-      class="btn btn-dark">
-      + 칼럼 생성
-  </a>
-</button>
 </div>
 </div>
 <script src="./js/columns.js"></script>
