--- a/public/createBoard.html
+++ b/public/createBoard.html
@@ -5,8 +5,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" />
     <title>보드생성</title>
+    <style>
+body {
+        background-color: #f6f8a9;
+        font-family: Arial, sans-serif;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        min-height: 100vh;
+        margin: 0;
+      }
+   .boardbody{
+    background-color: white;
+        padding: 20px;
+        width: 700px;
+        border-radius: 10px;
+        box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+        text-align: center;
+   }
+
+   .btn-primary{
+    background-color: #e8cdcd;
+        color: black;
+        border: none;
+        padding: 10px 20px;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: background-color 0.3s;
+      }
+      .btn-primary:hover {
+        background-color: #fff1f1; /* 더 연한 보라색으로 변경 */
+        color: black;
+      }
+   
+
+      </style>
   </head>
   <body>
+    <div class="boardbody">
     <div class="container mt-5">
       <h2>보드생성</h2>
       <form>
@@ -26,7 +63,7 @@
         </form>
       </div>
     </div>
-
+</div>
     <div class="modal fade" id="signInSuccessModal" tabindex="-1" aria-labelledby="signInSuccessModalLabel" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
