보드 생성 수정

--- a/public/createBoard.html
+++ b/public/createBoard.html
@@ -37,9 +37,7 @@ body {
       .btn-primary:hover {
         background-color: #fff1f1; /* 더 연한 보라색으로 변경 */
         color: black;
-      }
-   
-
+      } 
       </style>
   </head>
   <body>
@@ -72,7 +70,7 @@ body {
           </div>
           <div class="modal-body">
             <p>생성 완료되었습니다!</p>
-            <a href="./coulumns.html" class="btn btn-primary">보더 페이지로 이동</a>
+            <a href="./columns.html" class="btn btn-primary">보더 페이지로 이동</a>
           </div>
         </div>
       </div>
@@ -80,6 +78,6 @@ body {
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <script src="./js/board.js"></script>
+    <script src="./js/create_board.js"></script>
   </body>
 </html>
